--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <script>
     const correctMapping = {
       MAN: 'Linking network services around a city or metro region.',
-      PAN: 'Connecting one person\'s personal devices, like a phone and laptop.',
+      PAN: 'Connecting one person\'s personal devices.',
       WAN: 'Connecting schools or campuses across very large distances.',
       LAN: 'Connecting rooms or classrooms inside one local building/site.'
     };
